@@ -1,3 +1,8 @@
+2009-07-31  Michael Hutchinson  <mhutchinson@novell.com>
+
+	* MonoDevelop.Projects.Gui/ProjectFileEntry.cs: Actually empty
+	  the relative path if no file is selected.
+
 2009-07-31  Mike Krüger  <mkrueger@novell.com>
 
 	* MonoDevelop.Projects.Gui.Completion/CompletionWindowManager.cs:
